--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: {{ include "esgf.component.fullname" (list . "ingress") }}
   labels: {{ include "esgf.component.labels" (list . "ingress" .Values.ingress.labels) | nindent 4 }}
+  {{- if .Values.auth.enabled }}
   annotations:
     # Auth service configuration
     nginx.ingress.kubernetes.io/auth-url: "http://esgf-auth.default.svc.cluster.local:8080/verify/"
@@ -12,6 +13,7 @@ metadata:
     {{- with .Values.ingress.annotations }}
     {{ toYaml . | nindent 4 }}
     {{- end }}
+  {{- end }}
 spec:
   tls:
     - hosts:
