Fixed missing end block

--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -17,6 +17,7 @@ metadata:
   {{- with .Values.ingress.annotations }}
   annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
+  {{- end }}
 spec:
   tls:
     - hosts:
