--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -6,10 +6,10 @@ metadata:
   {{- if .Values.auth.enabled }}
   annotations:
     # Auth service configuration
-    nginx.ingress.kubernetes.io/auth-url: "http://esgf-auth.default.svc.cluster.local:8080/verify/"
+    nginx.ingress.kubernetes.io/auth-url: http://esgf-auth.{{ .Release.Namespace }}.svc.cluster.local:8080/verify/
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_set_header X-Original-URI $request_uri;
-    nginx.ingress.kubernetes.io/auth-signin: "https://$host:8443/login/"
+    nginx.ingress.kubernetes.io/auth-signin: https://$host/login/
     {{- with .Values.ingress.annotations }}
     {{ toYaml . | nindent 4 }}
     {{- end }}
