Updated OPA settings

--- a/deploy/kubernetes/chart/templates/opa/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/opa/configmap.yaml
@@ -8,14 +8,20 @@ data:
     default allow = false
 
     allow {
-        re_match("^/thredds/(fileServer|dodsC)/cmip5..*.aggregation.*", input.resource)
+        regex.match("^/thredds/(fileServer|dodsC)/cmip5..*.aggregation.*", input.resource)
         input.action = "Read"
     }
 
     allow {
-        regex.match("^/thredds/catalog/esgcet/c3s-cordex/.*", input.resource)
+        regex.match("^/thredds/(fileServer|dodsC)/esg_cordex/.*", input.resource)
+        input.subject.groups[_] = "/cordex_research"
+        input.action = "Read"
+    }
+
+    allow {
+        regex.match("^/esg-search/ws/publish", input.resource)
         input.subject.groups[_] = "/cordex_research/publish"
-        input.action = "Write"
+        input.action = "Read"
     }
 kind: ConfigMap
 metadata:
