--- a/deploy/kubernetes/chart/templates/auth/settings.yaml
+++ b/deploy/kubernetes/chart/templates/auth/settings.yaml
@@ -11,6 +11,10 @@ data:
   # Doing this instead of relying on the container-generated value ensures that the same
   # secret key is used across all replicas, which is important for session handling etc.
   {{- $runtimeSettings := merge $auth.runtimeSettings (dict "SECRET_KEY" (randAlphaNum 64)) }}
+  # Add the OPA server to the settings
+  {{- if ($opa.enabled) -}}
+  {{- $runtimeSettings := merge $runtimeSettings (dict "OPA_SERVER" (dict "host" "esgf-opa.{{ .Release.Namespace }}.svc.cluster.local")) }}
+  {{- end -}}
   # Output the runtime settings as a YAML file
   # Use 20- so that they run after the app settings, which are 10-
   20-runtime-settings.yaml: {{ toYaml $runtimeSettings | b64enc | quote }}
