--- a/deploy/kubernetes/chart/templates/auth/settings.yaml
+++ b/deploy/kubernetes/chart/templates/auth/settings.yaml
@@ -14,7 +14,7 @@ data:
   {{- $runtimeSettings := merge $auth.runtimeSettings (dict "SECRET_KEY" (randAlphaNum 64)) }}
   # Add the OPA server to the settings
   {{- if ($opa.enabled) -}}
-  {{- $runtimeSettings := merge $runtimeSettings (dict "OPA_SERVER" (dict "host" "esgf-opa.{{ .Release.Namespace }}.svc.cluster.local")) }}
+  {{- $runtimeSettings := merge $runtimeSettings (dict "OPA_SERVER" (dict "host" (print "esgf-opa." .Release.Namespace  ".svc.cluster.local"))) }}
   {{- end -}}
   # Output the runtime settings as a YAML file
   # Use 20- so that they run after the app settings, which are 10-
