Added the ability to customise the OPA policy and log level

--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -144,6 +144,8 @@ opa:
   # The tolerations for the OPA server pod
   # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
   tolerations:
+  # Log level for the OPA server
+  logLevel: info
 
 ###
 # Data node configuration
