--- a/deploy/kubernetes/chart/templates/opa/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/opa/deployment.yaml
@@ -31,6 +31,7 @@ spec:
           args:
           - "run"
           - "--ignore=.*"  # exclude hidden dirs created by Kubernetes
+          - "--log-level={{ $opa.logLevel }}"
           - "--server"
           - "/policies"
           volumeMounts:
