Updated opa policy template to include a required group

--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -146,6 +146,8 @@ opa:
   tolerations:
   # Log level for the OPA server
   logLevel: info
+  # Paths to restrict
+  restrictedPaths: []
 
 ###
 # Data node configuration
