--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   {{- if .Values.auth.enabled }}
   annotations:
     # Auth service configuration
-    nginx.ingress.kubernetes.io/auth-url: http://esgf-auth.{{ .Release.Namespace }}.svc.cluster.local:8080/verify/
+    nginx.ingress.kubernetes.io/auth-url: http://{{ include "esgf.component.fullname" (list . "auth") }}.{{ .Release.Namespace }}.svc.cluster.local:8080/verify/
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_set_header X-Original-URI $request_uri;
     nginx.ingress.kubernetes.io/auth-signin: https://$host/login/
