--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -6,14 +6,14 @@ metadata:
   {{- if .Values.auth.enabled }}
   annotations:
     # Auth service configuration
-    {{- if .Values.ingress.authUrl }}
-    nginx.ingress.kubernetes.io/auth-url: {{ .Values.ingress.authUrl }}
-    {{- else }}
     nginx.ingress.kubernetes.io/auth-url: http://{{ include "esgf.component.fullname" (list . "auth") }}.{{ .Release.Namespace }}.svc.cluster.local:8080/verify/
-    {{- end }}
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_set_header X-Original-URI $request_uri;
+    {{- if .Values.ingress.authSignin }}
+    nginx.ingress.kubernetes.io/auth-signin: {{ .Values.ingress.authSignin }}
+    {{- else }}
     nginx.ingress.kubernetes.io/auth-signin: https://$host/login/
+    {{- end }}
     {{- with .Values.ingress.annotations }}
     {{ toYaml . | nindent 4 }}
     {{- end }}
