--- a/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
@@ -8,14 +8,7 @@ metadata:
   annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  tls:
-    - hosts:
-        - {{ .Values.hostname | quote }}
-      {{- if .Values.ingress.tls.secretName }}
-      secretName: {{ .Values.ingress.tls.secretName }}
-      {{- else }}
-      secretName: {{ include "esgf.component.fullname" (list . "hostcert") }}
-      {{- end }}
+  {{ include "esgf.ingress.tls" . | indent 2 }}
   rules:
     - host: {{ .Values.hostname | quote }}
       http:
