--- a/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.auth.enabled }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "esgf.component.fullname" (list . "ingressAuth") }}
@@ -14,17 +14,26 @@ spec:
       http:
         paths:
           - path: /verify
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "auth") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "auth") }}
+                port:
+                  number: 8080
           - path: /login
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "auth") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "auth") }}
+                port:
+                  number: 8080
           {{- if .Values.opa.enabled }}
           - path: /v1/data
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "opa") }}
-              servicePort: 8181
+              service:
+                name: {{ include "esgf.component.fullname" (list . "opa") }}
+                port:
+                  number: 8181
           {{- end }}
 {{- end }}
