--- a/deploy/kubernetes/chart/templates/ingress/ingress-publish.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress-publish.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.index.enabled }}{{- if .Values.index.search.enabled }}{{- if .Values.index.search.publishIpRange }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "esgf.component.fullname" (list . "ingressPublish") }}
@@ -17,7 +17,10 @@ spec:
       http:
         paths:
           - path: /esg-search/ws/publish
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "search") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "search") }}
+                port:
+                  number: 8080
 {{- end }}{{- end }}{{- end }}
