--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "esgf.component.fullname" (list . "ingress") }}
@@ -17,15 +17,21 @@ spec:
           {{- if .Values.data.enabled }}
           {{- if .Values.data.thredds.enabled }}
           - path: /thredds
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "thredds") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "thredds") }}
+                port:
+                  number: 8080
           {{- end }}
           {{- if .Values.data.fileServer.enabled }}
           - path: /thredds/fileServer
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "fileServer") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "fileServer") }}
+                port:
+                  number: 8080
           {{- end }}
           {{- end }}
           {{- if .Values.index.enabled }}
@@ -34,19 +40,27 @@ spec:
           # However wildcard paths are not supported on all ingress controllers
           # So we make a path definition for each core
           - path: /solr/aggregations/replication
+            pathType: Prefix
             backend: &solr
               # We point to the Solr slave
-              serviceName: {{ include "esgf.component.fullname" (list . "solr" "slave") }}
-              servicePort: 8983
+              service:
+                name: {{ include "esgf.component.fullname" (list . "solr" "slave") }}
+                port:
+                  number: 8983
           - path: /solr/datasets/replication
+            pathType: Prefix
             backend: *solr
           - path: /solr/files/replication
+            pathType: Prefix
             backend: *solr
           {{- end }}
           {{- if .Values.index.search.enabled }}
           - path: /esg-search
+            pathType: Prefix
             backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "search") }}
-              servicePort: 8080
+              service:
+                name: {{ include "esgf.component.fullname" (list . "search") }}
+                port:
+                  number: 8080
           {{- end }}
           {{- end }}
