Revert "Add jdk11 image"
This reverts commit 9255bb8efce3f07a95b1722e9afdc129434ae118.

--- a/images/thredds/Dockerfile
+++ b/images/thredds/Dockerfile
@@ -5,7 +5,7 @@
 ARG ESGF_REPOSITORY_BASE=esgfdeploy
 ARG ESGF_IMAGES_VERSION=latest
 
-FROM ${ESGF_REPOSITORY_BASE}/jdk11:${ESGF_IMAGES_VERSION} as builder
+FROM ${ESGF_REPOSITORY_BASE}/jre11:${ESGF_IMAGES_VERSION} as builder
 
 # Unpack the THREDDS war
 ARG THREDDS_VERSION=5.4
