Using Java 8 for search app

--- a/images/search/Dockerfile
+++ b/images/search/Dockerfile
@@ -14,6 +14,11 @@ FROM ${ESGF_REPOSITORY_BASE}/tomcat:${ESGF_IMAGES_VERSION}
 
 USER root
 
+RUN yum makecache && \
+    yum remove -y java-11-openjdk-headless && \
+    yum install -y java-1.8.0-openjdk-headless-1.8.0.345.b01 && \
+    yum clean all
+
 # Copy the unpacked webapp from the builder
 COPY --from=builder /application ./webapps/esg-search
 # Install a custom log4j.xml that doesn't roll log files
