Update Keycloak version

--- a/images/keycloak/Dockerfile
+++ b/images/keycloak/Dockerfile
@@ -5,7 +5,8 @@
 ARG ESGF_REPOSITORY_BASE=esgfdeploy
 ARG ESGF_IMAGES_VERSION=latest
 
-ARG KEYCLOAK_VERSION=18.0.2
+ARG KEYCLOAK_VERSION=19.0.3
+ARG KEYCLOAK_SHA1=d438c185177d3bacf5b20580d3506c4971283d3d
 ARG KEYCLOAK_DIST=https://github.com/keycloak/keycloak/releases/download/$KEYCLOAK_VERSION/keycloak-$KEYCLOAK_VERSION.tar.gz
 
 
@@ -13,6 +14,7 @@ FROM ${ESGF_REPOSITORY_BASE}/jdk:${ESGF_IMAGES_VERSION} as build-env
 
 # Redeclare the ARGs that are required from the global scope
 ARG KEYCLOAK_VERSION
+ARG KEYCLOAK_SHA1
 ARG KEYCLOAK_DIST
 
 ADD $KEYCLOAK_DIST /tmp/keycloak/
@@ -20,6 +22,7 @@ ADD $KEYCLOAK_DIST /tmp/keycloak/
 # The next step makes it uniform for local development and upstream built.
 # If it is a local tar archive then it is unpacked, if from remote is just downloaded.
 RUN (cd /tmp/keycloak && \
+    echo "$KEYCLOAK_SHA1 *keycloak-$KEYCLOAK_VERSION.tar.gz" | sha1sum --strict --check && \
     tar -xvf /tmp/keycloak/keycloak-*.tar.gz && \
     rm /tmp/keycloak/keycloak-*.tar.gz) || true
 
