--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -97,6 +97,9 @@ auth:
       rule_name: allow
     RESOURCE_URI_QUERY_KEY: rd
     RESOURCE_URI_HEADER_KEY: HTTP_X_ORIGINAL_URL
+    # Group info keys for authorization
+    OAUTH2_GROUPS_KEY: group_membership
+    OIDC_GROUPS_KEY: group_membership
     # OAuth Bearer Token auth settings
     OAUTH_CLIENT_ID:
     OAUTH_CLIENT_SECRET:
