--- a/deploy/ansible/roles/docker/tasks/main.yml
+++ b/deploy/ansible/roles/docker/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
 
-- name: Install Docker
-  yum:
-    name: docker
-    state: latest
+- name: Add Docker Repo
+  command: dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
   register: docker_install
+
+- name: Start Docker Daemon
+  command: systemctl start docker
 
 - name: Make docker.service.d directory
   file:
@@ -51,6 +52,7 @@
     name: pip
     version: 19.0
 
+# Requires super user sudo prompt?
 - name: Install Docker SDK
   pip:
     name: docker
