Added rocky9 and alma9 tasks for installing on different nodes, changed task names

--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -7,7 +7,7 @@
 - hosts: all
   become: true
   roles:
-    - docker
+    - alma_docker
     - { name: data, tags: [data] }
     - { name: index, tags: [index] }
     - proxy
