--- a/images/thredds/Dockerfile
+++ b/images/thredds/Dockerfile
@@ -9,7 +9,8 @@ FROM ${ESGF_REPOSITORY_BASE}/jdk:${ESGF_IMAGES_VERSION} as builder
 
 # Unpack the THREDDS war
 ARG THREDDS_VERSION=5.5
-ARG THREDDS_SHA1=04ebd7193c98c924e7c5d26aaf69d082b4926af2
+# Keep SHA1 value up to date - changes cause the checksum to fail
+ARG THREDDS_SHA1=cd9063eb5053ffcfea75ae8d65ead734a162a91d
 ARG THREDDS_URL=https://downloads.unidata.ucar.edu/tds/$THREDDS_VERSION/thredds-$THREDDS_VERSION-SNAPSHOT.war
 RUN mkdir /application && \
     cd /application && \
