--- a/deploy/ansible/roles/data/tasks/thredds_install.yml
+++ b/deploy/ansible/roles/data/tasks/thredds_install.yml
@@ -76,7 +76,7 @@
     networks:
       - name: esgf
     networks_cli_compatible: yes
-    user: "root" #"{{ data_security_context_user }}"
+    user: "{{ data_security_context_user }}"
     groups: "{{ data_security_context_groups }}"
     volumes: >-
       [
