Updated SSL config and added usage instructions

--- a/deploy/ansible/roles/proxy/defaults/main.yml
+++ b/deploy/ansible/roles/proxy/defaults/main.yml
@@ -28,6 +28,7 @@ image_pull: true
 
 # Default Nginx config using only HTTP
 nginx_config_template: proxy.conf.j2
+published_port: 80
 
 # Generates a Diffie-Helmet file for the server if enabled
 generate_dhparam: false
