--- a/deploy/ansible/roles/proxy/tasks/main.yml
+++ b/deploy/ansible/roles/proxy/tasks/main.yml
@@ -34,6 +34,16 @@
         dest: "{{ ssl_private_key_path }}"
   when: ssl_certificate is defined and ssl_private_key is defined
 
+- name: Make SSL cert files readable by the Docker user only
+  file:
+    path: "{{ item }}"
+    owner: 1000
+    group: 1000
+    mode: "u=r,g=,o="
+  with_items:
+    - "{{ ssl_certificate_path }}"
+    - "{{ ssl_private_key_path }}"
+
 - name: Create Ephemeral Diffie-Helman parameters file
   command: openssl dhparam -dsaparam -out /etc/nginx/ssl/dhparam.pem 4096
   args:
